@startuml

interface Ticket {
    +register()
    +notify()
}

interface DepartmentNotifier {
    +update(ticket: Ticket)
}

class TechnicalTicket
class BillingTicket
class PlanningTicket

class TechnicalArea
class PlanningArea
class SystemsArea

Ticket <|-- TechnicalTicket
Ticket <|-- BillingTicket
Ticket <|-- PlanningTicket

DepartmentNotifier <|.. TechnicalArea
DepartmentNotifier <|.. PlanningArea
DepartmentNotifier <|.. SystemsArea

TechnicalTicket --> DepartmentNotifier
BillingTicket --> DepartmentNotifier
PlanningTicket --> DepartmentNotifier
@enduml
